@startuml
' Corrected for actual project schema (MongoDB document model)

hide methods
skinparam classAttributeIconSize 0

class "users" as Users {
  +id: ObjectId (PK)
  +name: String
  +email: String (UNIQUE)
  +password: String (hashed)
  +createdAt: DateTime
  +updatedAt: DateTime
}

class "quiz_attempts" as QuizAttempts {
  +id: ObjectId (PK)
  +userId: String (FK -> users.id)
  +quizType: String  <<PREDEFINED|AI>>
  +correct: Integer
  +total: Integer
  +percentage: Double
  +createdAt: DateTime
  +questions: QuestionAttempt[]
}

class "QuestionAttempt (embedded)" as QuestionAttempt {
  +question: String
  +options: String[]
  +correctAnswer: Integer
  +userAnswer: Integer? (nullable)
  +explanation: String? (nullable)
  +topic: String? (nullable)
}

Users "1" -- "0..*" QuizAttempts : owns
QuizAttempts "1" *-- "1..*" QuestionAttempt : embeds

note right of QuizAttempts
  Indexes:
  - userId
  - (optional) userId + createdAt
end note

note left of Users
  Unique index:
  - email
end note

@enduml
